crates/nak-ir-proc/tests/compile_fail/from_variants_named_fields.stderr
error: FromVariants: variant `Named` must have exactly one unnamed field
 --> tests/compile_fail/from_variants_named_fields.rs:8:10
  |
8 | #[derive(FromVariants)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromVariants` (in Nightly builds, run with -Z macro-backtrace for more info)
